388193 Aligning images with the edges of the divs to ensure no gap appears when their are rounding errors due to the zoom level

--- a/org.eclipse.virgo.management.console/src/main/webapp/styles/common.css
+++ b/org.eclipse.virgo.management.console/src/main/webapp/styles/common.css
@@ -172,13 +172,13 @@ a:active, a.active {
 }
 
 #navigation-left-curve {
-	background: transparent url(../images/menu-curve-left.png) no-repeat top left;
+	background: transparent url(../images/menu-curve-left.png) no-repeat left top;
 	height: 26px;
 	width: 30px;
 }
 
 #navigation-right-curve {
-	background: transparent url(../images/menu-curve-right.png) no-repeat top right;
+	background: transparent url(../images/menu-curve-right.png) no-repeat right top;
 	height: 26px;
 	width: 30px;
 }
@@ -195,11 +195,11 @@ a:active, a.active {
 }
 
 #navigation li:hover .button-cap-left-white {
-	background: transparent url(../images/button-cap-left-white.png) no-repeat;
+	background: transparent url(../images/button-cap-left-white.png) no-repeat right center;
 }
 
 #navigation li:hover .button-cap-right-white {
-    background: transparent url(../images/button-cap-right-white.png) no-repeat;
+    background: transparent url(../images/button-cap-right-white.png) no-repeat left center;
 }
 
 #navigation .selected-navigation .navigation-text {
@@ -375,13 +375,13 @@ td {
 }
 
 .control-cap-left {
-	background: transparent url(../images/controls-cap-left.png) no-repeat top left;
-	margin-right: -8px;
+	background: transparent url(../images/controls-cap-left.png) no-repeat right center;
+	margin-right: -7px;
 }
 
 .control-cap-right {
-	background: transparent url(../images/controls-cap-right.png) no-repeat top right;
-	margin-left: -8px;
+	background: transparent url(../images/controls-cap-right.png) no-repeat left center;
+	margin-left: -7px;
 }
 
 .control-text, .button-text {
@@ -404,11 +404,11 @@ td {
 }
 	
 .button-cap-left-blue {
-	background: transparent url(../images/button-cap-left-blue.png) no-repeat;
+	background: transparent url(../images/button-cap-left-blue.png) no-repeat right center;
 }
 
 .button-cap-right-blue {
-    background: transparent url("../images/button-cap-right-blue.png") no-repeat;
+    background: transparent url("../images/button-cap-right-blue.png") no-repeat left center;
 }
 
 .button-text {
